--- a/5/catalog.html
+++ b/5/catalog.html
@@ -21,6 +21,15 @@
       <button class="main-header__menu-opener" type="button">
         <span class="visually-hidden">Открывает меню сайта.</span>
       </button>
+      <a class="main-header__index-link" href="#">
+        Главная
+      </a>
+      <a class="main-header__catalog-link" href="catalog.html">
+        Каталог продукции
+      </a>
+      <a class="main-header__form-link" href="form.html">
+        Подбор программы
+      </a>
     </header>
     <main class="catalog-main">
       <section class="products">
