--- a/11/catalog.html
+++ b/11/catalog.html
@@ -44,7 +44,11 @@
           <div class="products__product-cell">
             <div class="products__table product">
               <div class="products__image-wrapper products__chicken-500">
-                <img class="products__image" src="img/mobile/catalog/chicken-500.png" srcset="img/mobile/catalog/chicken-500-2x.png 2x" width="68" height="86" alt="Cat Energy PRO 500 г">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/desktop/catalog/chicken-500-desktop.png 1x, img/desktop/catalog/chicken-500-desktop-2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/tablet/catalog/chicken-500-tablet.png 1x, img/tablet/catalog/chicken-500-tablet2x.png 2x">
+                  <img class="products__image" src="img/mobile/catalog/chicken-500.png" srcset="img/mobile/catalog/chicken-500-2x.png 2x" width="68" height="86" alt="Cat Energy PRO 500 г">
+                </picture>
               </div>
               <p class="products__name product__name">
                 Cat Energy PRO 500 г
@@ -77,7 +81,11 @@
           <div class="products__product-cell">
             <div class="products__table product">
               <div class="products__image-wrapper products__chicken-1000">
-                <img class="products__image" src="img/mobile/catalog/chicken-1000.png" srcset="img/mobile/catalog/chicken-1000-2x.png 2x" width="84" height="100" alt="Cat Energy PRO 1000 г">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/desktop/catalog/chicken-1000-desktop.png 1x, img/desktop/catalog/chicken-1000-desktop-2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/tablet/catalog/chicken-1000-tablet.png 1x, img/tablet/catalog/chicken-1000-tablet2x.png 2x">
+                  <img class="products__image" src="img/mobile/catalog/chicken-1000.png" srcset="img/mobile/catalog/chicken-1000-2x.png 2x" width="84" height="100" alt="Cat Energy PRO 1000 г">
+                </picture>
               </div>
               <p class="products__name product__name">
                 Cat Energy PRO 1000 г
@@ -110,7 +118,11 @@
           <div class="products__product-cell">
             <div class="products__table product">
               <div class="products__image-wrapper products__fish-500">
-                <img class="products__image" src="img/mobile/catalog/fish-500.png" srcset="img/mobile/catalog/fish-500-2x.png 2x" width="68" height="78" alt="Cat Energy Pro 500 г">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/desktop/catalog/fish-500-desktop.png 1x, img/desktop/catalog/fish-500-desktop-2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/tablet/catalog/fish-500-desktop.png 1x, img/tablet/catalog/fish-500-tablet2x.png 2x">
+                  <img class="products__image" src="img/mobile/catalog/fish-500.png" srcset="img/mobile/catalog/fish-500-2x.png 2x" width="68" height="78" alt="Cat Energy Pro 500 г">
+                </picture>
               </div>
               <p class="products__name product__name">
                 Cat Energy Pro 500 г
@@ -143,7 +155,11 @@
           <div class="products__product-cell">
             <div class="products__table product">
               <div class="products__image-wrapper products__fish-1000">
-                <img class="products__image" src="img/mobile/catalog/fish-1000.png" srcset="img/mobile/catalog/fish-1000-2x.png 2x" width="84" height="100" alt="Cat Energy Pro 1000 г">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/desktop/catalog/fish-1000-desktop.png 1x, img/desktop/catalog/fish-1000-desktop-2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/tablet/catalog/fish-1000-tablet.png 1x, img/tablet/catalog/fish-1000-tablet2x.png 2x">
+                  <img class="products__image" src="img/mobile/catalog/fish-1000.png" srcset="img/mobile/catalog/fish-1000-2x.png 2x" width="84" height="100" alt="Cat Energy Pro 1000 г">
+                </picture>
               </div>
               <p class="products__name product__name">
                 Cat Energy Pro 1000 г
@@ -176,7 +192,11 @@
           <div class="products__product-cell">
             <div class="products__table product">
               <div class="products__image-wrapper products__buckwheat-500">
-                <img class="products__image" src="img/mobile/catalog/buckwheat-500.png" srcset="img/mobile/catalog/buckwheat-500-2x.png 2x" width="68" height="78" alt="Cat Energy slim 500 г">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/desktop/catalog/buckwheat-500-desktop.png 1x, img/desktop/catalog/buckwheat-500-desktop-2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/tablet/catalog/buckwheat-500-tablet.png 1x, img/tablet/catalog/buckwheat-500-tablet2x.png 2x">
+                  <img class="products__image" src="img/mobile/catalog/buckwheat-500.png" srcset="img/mobile/catalog/buckwheat-500-2x.png 2x" width="68" height="78" alt="Cat Energy slim 500 г">
+                </picture>
               </div>
               <p class="products__name product__name">
                 Cat Energy slim 500 г
@@ -209,7 +229,11 @@
           <div class="products__product-cell">
             <div class="products__table product">
               <div class="products__image-wrapper products__buckwheat-1000">
-                <img class="products__image" src="img/mobile/catalog/buckwheat-1000.png" srcset="img/mobile/catalog/buckwheat-1000-2x.png 2x" width="84" height="100" alt="Cat Energy slim 1000 г">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/desktop/catalog/buckwheat-1000-desktop.png 1x, img/desktop/catalog/buckwheat-1000-desktop-2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/tablet/catalog/buckwheat-1000-tablet.png 1x, img/tablet/catalog/buckwheat-1000-tablet2x.png 2x">
+                  <img class="products__image" src="img/mobile/catalog/buckwheat-1000.png" srcset="img/mobile/catalog/buckwheat-1000-2x.png 2x" width="84" height="100" alt="Cat Energy slim 1000 г">
+                </picture>
               </div>
               <p class="products__name product__name">
                 Cat Energy slim 1000 г
@@ -242,7 +266,11 @@
           <div class="products__product-cell">
             <div class="products__table product">
               <div class="products__image-wrapper products__rice-500">
-                <img class="products__image" src="img/mobile/catalog/rice-500.png" srcset="img/mobile/catalog/rice-500-2x.png 2x" width="84" height="100" alt="Cat Energy slim 500 г">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/desktop/catalog/rice-500-desktop.png 1x, img/desktop/catalog/rice-500-desktop-2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/tablet/catalog/rice-500-tablet.png 1x, img/tablet/catalog/rice-500-tablet2x.png 2x">
+                  <img class="products__image" src="img/mobile/catalog/rice-500.png" srcset="img/mobile/catalog/rice-500-2x.png 2x" width="84" height="100" alt="Cat Energy slim 500 г">
+                </picture>
               </div>
               <p class="products__name product__name">
                 Cat Energy slim 500 г
