:heavy_check_mark: Сборка #12

--- a/12/index.html
+++ b/12/index.html
@@ -144,16 +144,16 @@
               <li class="slider-list__logo slider-list__small visually-hidden">
                 <img class="skinny-cat-img" src="img/mobile/index/example-slider-cat-small.png" srcset="img/mobile/index/example-slider-cat-small2x.png 2x" width="280" height="232" alt="похудевший котик.">
               </li>
-              <li class="example__toggle-wrapper">
+              <li class="example__toggle-wrapper slider">
                 <button class="slider__toggle" type="button">
                   <span class="visually-hidden">Было.</span>
-                  <span>было</span>
+                  <span class="example__toggle-text">было</span>
                 </button>
                 <div class="slider__toggle-swap"></div>
                 <div class="slider__toggle-range"></div>
                 <button class="slider__toggle" type="button">
                   <span class="visually-hidden">Стало.</span>
-                  <span>стало</span>
+                  <span class="example__toggle-text">стало</span>
                 </button>
               </li>
             </ul>
@@ -165,7 +165,7 @@
               приглашаем к сотрудничеству дилеров!
             </p>
             <address class="invite-description__address address">
-              ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+              ул. Большая Конюшенная, д. 19/8 <br/><br/> Санкт-Петербург
             </address>
           </div>
           <div class="invite__map map">
@@ -177,7 +177,7 @@
         <div class="main-footer__logo footer-logo">
           <a class="footer-logo__title" href="index.html">
             <span class="visually-hidden">название сайта "CAT-ENERGY".</span>
-            <svg class="footer-title" width="101" height="18">
+            <svg class="footer-title" width="128" height="24">
               <use xlink:href="img/sprite.svg#footer-title"></use>
             </svg>
           </a>
