--- a/14/form.html
+++ b/14/form.html
@@ -51,7 +51,7 @@
             Подбор программы
           </h1>
           <p class="questionnaire__text">
-            Заполните анкету, и мы подберем программу питания для вашего кота
+            Заполните анкету, и мы подберем&nbsp;&nbsp;&nbsp; программу питания для вашего кота
           </p>
         </div>
         <form class="questionnaire__form form" action="https://echo.htmlacademy.ru/" method="post">
@@ -73,17 +73,17 @@
             <legend class="visually-hidden">Цель программы.</legend>
             <div class="form__goal-wrapper">
               <label class="form__weight-loss-text form__radio-label" >
-                <input class="form__weight-loss form__radio"  type="radio" name="aim" value="weight-loss" checked>
+                <input class="form__weight-loss form__radio"  type="radio" name="Goal." value="weight-loss" checked>
                 <span class="radio"></span>
                 похудение
               </label>
               <label class="form__weight-grow-text form__radio-label">
-                <input class="form__weight-grow form__radio" type="radio" name="aim" value="weight-grow">
+                <input class="form__weight-grow form__radio" type="radio" name="Goal." value="weight-grow">
                 <span class="radio"></span>
                 Набор массы
               </label>
               <label class="form__unknown-text form__radio-label">
-                <input class="form__unknown form__radio" type="radio" name="aim" value="unknown">
+                <input class="form__unknown form__radio" type="radio" name="Goal." value="unknown">
                 <span class="radio"></span>
                 Не знаю (Нужен ваш совет)
               </label>
@@ -97,11 +97,11 @@
               <div class="form__contacts-content">
                 <label class="form__email-text form__contacts-text">
                   E-mail:*
-                  <input class="form__email form__contacts-input" type="email" name="Электронная почта." placeholder="kuklachev@gmail.com" required>
+                  <input class="form__email form__contacts-input" type="email" name="Email." placeholder="kuklachev@gmail.com" required>
                 </label>
                 <label class="form__tel-text form__contacts-text">
                   Телефон:*
-                  <input class="form__tel form__contacts-input" type="tel" name="Телефон." placeholder="8 (960) 900-60-90" required>
+                  <input class="form__tel form__contacts-input" type="tel" name="Tel." placeholder="8 (960) 900-60-90" required>
                 </label>
               </div>
             </div>
@@ -112,7 +112,7 @@
                 Комментарий
               </h2>
               <label class="form__comments-name" for="form__comments"></label>
-              <textarea class="form__comments-text" id="form__comments" name="comments" rows="5" cols="33">Расскажите обо всех повадках кота</textarea>
+              <textarea class="form__comments-text" id="form__comments" name="Comments." rows="5" cols="33">Расскажите обо всех повадках кота</textarea>
             </div>
           </fieldset>
           <fieldset class="form__additional form__fieldset">
@@ -122,22 +122,22 @@
               </h2>
               <div class="form__additional-wrapper">
                 <label class="form__sugar-text form__checkbox-label">
-                  <input class="form__sugar form__checkbox" type="checkbox" name="Сахарозаменитель." checked>
+                  <input class="form__sugar form__checkbox" type="checkbox" name="Pseudo-Sugar." checked>
                   <span class="checkbox"></span>
                   сахарозаменитель
                 </label>
                 <label class="form__water-text form__checkbox-label">
-                  <input class="form__water form__checkbox" type="checkbox" name="Вода.">
+                  <input class="form__water form__checkbox" type="checkbox" name="Water.">
                   <span class="checkbox"></span>
                   питьевая вода
                 </label>
                 <label class="form__milk-text form__checkbox-label">
-                  <input class="form__milk form__checkbox" type="checkbox" name="Молоко.">
+                  <input class="form__milk form__checkbox" type="checkbox" name="Milk.">
                   <span class="checkbox"></span>
                   молоко
                 </label>
                 <label class="form__vitamins-text form__checkbox-label">
-                  <input class="form__vitamins form__checkbox" type="checkbox" name="Витамины.">
+                  <input class="form__vitamins form__checkbox" type="checkbox" name="Vitamins.">
                   <span class="checkbox"></span>
                   витамины
                 </label>
@@ -145,7 +145,7 @@
             </div>
           </fieldset>
           <div class="form__submit-button center-positioner">
-            <button class="form__button button" type="submit" name="submit-button">
+            <button class="form__button button" type="submit" name="Submit-button.">
               отправить заявку
             </button>
             <p class="form__note">
@@ -157,7 +157,7 @@
       <section class="invite">
         <div class="invite__description invite__description-grey invite-description">
           <p class="invite-description__info info">
-            приглашаем к сотрудничеству дилеров!
+            приглашаем&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; к сотрудничеству дилеров!
           </p>
           <address class="invite-description__address address">
             ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span>
